--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.8.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
-    "express": "^4.21.2",
+    "express": "^4.22.1",
     "express-session": "^1.18.1",
     "git": "^0.1.5",
     "init": "^0.1.2",
@@ -26,6 +26,7 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "razorpay": "^2.9.6",
     "validator": "^13.12.0"
   }
 }
