--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
+    "exceljs": "^4.4.0",
     "express": "^4.22.1",
     "express-session": "^1.18.1",
     "git": "^0.1.5",
     "init": "^0.1.2",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "mongodb": "^6.14.0",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
@@ -27,7 +30,9 @@
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pdfkit": "^0.17.2",
     "razorpay": "^2.9.6",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "xlsx": "^0.18.5"
   }
 }
